# IterativeClosestPoint

./: .gitignore  CMakeLists.txt  GitHub上传清单.md  README.md  icp_registration.cpp  test_icp.cpp  test_las.cpp
.cache/clangd/index/: AlignedBox.h.8BA95D07CB3C29DF.idx  AmbiVector.h.E7F15306E68164DD.idx  Amd.h.BFE8EF8FE46F6B59.idx  AngleAxis.h.2888C62E90214B8B.idx  Array.h.DE574C60CC6E2D8E.idx  ArrayBase.h.6881DD090ED3737D.idx  ArrayCwiseBinaryOps.h.E51AED4514C40CDE.idx  ArrayCwiseUnaryOps.h.479E0EDDE09CB2E2.idx  ArrayWrapper.h.E71902F18C141DF3.idx  Assign.h.2D090C6205C9E7A7.idx  AssignEvaluator.h.E209538A8FC39409.idx  AssignmentFunctors.h.D7D65E7D162F48F8.idx  BDCSVD.h.8BC10173EA8E10D8.idx  BandMatrix.h.DB5092A83FB56BDC.idx  BasicPreconditioners.h.58548D05A0DCAEDE.idx  BiCGSTAB.h.1576E3C09D0D428D.idx  BinaryFunctors.h.1CBF0C748B22C502.idx  BlasUtil.h.5EEF2D473DEBDD26.idx  Block.h.403FBD7AC1C072E9.idx  BlockHouseholder.h.21CD99C96FF46873.idx  BlockMethods.h.5B98F371D3D78A24.idx  BooleanRedux.h.8773DEC2D2304DF2.idx  Cholesky.E79F3ADBB376347A.idx  ColPivHouseholderQR.h.AC26FD08053D3CD4.idx  CommaInitializer.h.40C29749EC0D702D.idx  CommonCwiseBinaryOps.h.FF5AB71428B5A5BD.idx  CommonCwiseUnaryOps.h.35C5B4DB5085FB43.idx  CompleteOrthogonalDecomposition.h.4FB6555B09576435.idx  Complex.h.80BD03849AEC1FA3.idx  Complex.h.9D8B335C9E513E1E.idx  ComplexEigenSolver.h.108EBE487A2D6E33.idx  ComplexSchur.h.D89DDE5467549E5E.idx  CompressedStorage.h.87B29A02E40C3A7B.idx  ConditionEstimator.h.B6CD12C50EF199BE.idx  ConjugateGradient.h.1A84321A943CE154.idx  ConservativeSparseSparseProduct.h.17B6431AC76C4F3A.idx  Constants.h.D8B9FFC42C677E21.idx  Core.F472673F7334593B.idx  CoreEvaluators.h.B40B3E503354C097.idx  CoreIterators.h.2B74A6C4CD622733.idx  (+201 more)
Code/: CMakeLists.txt  drawwidget.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  quadtree.cpp  quadtree.h  querymanager.cpp  querymanager.h  thepic.qrc
Code/app/: appwindow.cpp  appwindow.h
Code/common/: queryparameters.h  querytypes.h
Code/services/: incidentservice.cpp  incidentservice.h  quadtreerepository.cpp  quadtreerepository.h  reportservice.cpp  reportservice.h  settingsservice.cpp  settingsservice.h  statisticservice.cpp  statisticservice.h  trajectoryservice.cpp  trajectoryservice.h
Code/ui/components/: infocard.cpp  infocard.h  queryform.cpp  queryform.h
Code/ui/pages/: analyticspage.cpp  analyticspage.h  dashboardpage.cpp  dashboardpage.h  datamanagerpage.cpp  datamanagerpage.h  incidentpage.cpp  incidentpage.h  playbackpage.cpp  playbackpage.h  queryworkbenchpage.cpp  queryworkbenchpage.h  reportpage.cpp  reportpage.h  settingspage.cpp  settingspage.h  visualizationpage.cpp  visualizationpage.h
PointCloudRegistration/: BUILD_GUIDE.md  CMakeLists.txt  IMPLEMENTATION_STATUS.md  README.md  STATUS.md  main.cpp
PointCloudRegistration/core/: icpengine.cpp  icpengine.h  lasio.cpp  lasio.h  octree.cpp  octree.h  pointcloud.cpp  pointcloud.h
PointCloudRegistration/services/: registrationservice.cpp  registrationservice.h  settingsservice.cpp  settingsservice.h
PointCloudRegistration/ui/: mainwindow.cpp  mainwindow.h
PointCloudRegistration/ui/pages/: dashboardpage.cpp  dashboardpage.h  datamanagerpage.cpp  datamanagerpage.h  registrationpage.cpp  registrationpage.h  settingspage.cpp  settingspage.h  visualizationpage.cpp  visualizationpage.h
PointCloudRegistration/widgets/: pointcloudviewer.cpp  pointcloudviewer.h
ShowLasFile/: ShowLasFile.pro  ShowLasFile.pro.user.2553c8f.4.8-pre1  lasreader.cpp  lasreader.h  showwindow.cpp  showwindow.h  widget.cpp  widget.h  依赖库安装说明.md
